<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_circle_gray"
            android:scaleType="centerCrop"
            android:background="@drawable/ic_circle_gray"
            android:contentDescription="@string/profile_description"/>

        <TextView
            android:id="@+id/tvProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_nickname"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/black"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/btnorder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top|center_horizontal"
                android:paddingTop="6dp"
                android:clickable="true"
                android:focusable="true"

                android:text="@string/profile_order"
                android:textSize="15sp"

                app:drawableTopCompat="@drawable/ic_order"
                android:drawablePadding="2dp" />

            <TextView
                android:id="@+id/btnpass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top|center_horizontal"
                android:paddingTop="6dp"
                android:clickable="true"
                android:focusable="true"

                android:text="@string/profile_pass"
                android:textSize="15sp"

                app:drawableTopCompat="@drawable/ic_pass"
                android:drawablePadding="2dp" />

            <TextView
                android:id="@+id/btnevent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top|center_horizontal"
                android:paddingTop="6dp"
                android:clickable="true"
                android:focusable="true"

                android:text="@string/profile_event"
                android:textSize="15sp"

                app:drawableTopCompat="@drawable/ic_event"
                android:drawablePadding="2dp" />

            <TextView
                android:id="@+id/btnsetting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top|center_horizontal"
                android:paddingTop="6dp"
                android:clickable="true"
                android:focusable="true"

                android:text="@string/profile_setting"
                android:textSize="15sp"

                app:drawableTopCompat="@drawable/ic_setting"
                android:drawablePadding="2dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/membership"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="15dp"
            android:background="#EEEEEE"
            android:padding="16dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:text="@string/profile_membership"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/profile_hoeMany"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <TextView
                android:text="@string/profile_arrow"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:text="@string/profile_following"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/following"
                android:text="@string/profile_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFollowing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/profile_registerDate"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:background="@color/light_gray"/>

    </LinearLayout>

</ScrollView>